# icp-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Procfile  README.md  mongodb.yaml  prometheus.yml  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py  tox.ini  wsgi.py
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
icp_analyzer/: README.md  requirements.txt
icp_analyzer/data/: icp_analysis_adyen.com_20250314_203307.json  icp_analysis_bicycle.ai_20250314_203112.json  icp_analysis_stripe.com_20250314_194611.json  icp_analysis_stripe.com_20250314_194703.json  icp_analysis_stripe.com_20250314_194840.json  icp_analysis_stripe.com_20250314_194924.json  icp_analysis_stripe.com_20250314_195022.json  icp_analysis_stripe.com_20250314_201418.json  icp_analysis_stripe.com_20250314_202548.json  icp_analysis_stripe.com_20250314_203259.json
icp_analyzer/icp_analyzer/src/: __init__.py  example.py
icp_analyzer/src/: __init__.py  analyzer.py  processor.py  scraper.py
src/: __init__.py  app.py  config.py  example.py  example_analyzer.py
src/analyzers/: advanced_analyzer.py  comparative_analyzer.py  competitive_analyzer.py  testimonial_analyzer.py
src/api/: api.py  openapi.yaml
src/core/: app.py  cache.py  config.py  database.py  monitoring.py  tasks.py
src/reporting/: report_generator.py
src/scrapers/: base_scraper.py  website_scraper.py
src/templates/: index.html
src/utils/: decorators.py
